tests/ui/suggestions/issue-116434-2021.stderr
error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/issue-116434-2021.rs:5:17
   |
LL |     fn foo() -> Clone;
   |                 ^^^^^
   |
help: `Clone` is not object safe, use `impl Clone` to return an opaque type, as long as you return a single underlying type
   |
LL |     fn foo() -> impl Clone;
   |                 ++++

error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/issue-116434-2021.rs:14:20
   |
LL |     fn handle() -> DbHandle;
   |                    ^^^^^^^^
   |
help: `DbHandle` is not object safe, use `impl DbHandle` to return an opaque type, as long as you return a single underlying type
   |
LL |     fn handle() -> impl DbHandle;
   |                    ++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0782`.
